<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.kidssecurity.view_model.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_layout_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.LoginFragment">


        <RadioGroup
            android:id="@+id/user_choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/parent_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/radio_button_margin"
                android:checked="true"
                android:scrollHorizontally="false"
                android:text="@string/parent_string"/>

            <RadioButton
                android:id="@+id/child_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/radio_button_margin"
                android:text="@string/child_string"/>
        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_text_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:hint=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_choice">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_string" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_text_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint=""
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="@+id/login_text_field"
            app:layout_constraintStart_toStartOf="@+id/login_text_field"
            app:layout_constraintTop_toBottomOf="@+id/login_text_field">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/psw_string"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/signIn_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:text="@string/sign_in_button"
            app:layout_constraintStart_toStartOf="@+id/password_text_field"
            app:layout_constraintTop_toBottomOf="@+id/password_text_field" />

        <Button
            android:id="@+id/create_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:text="@string/create_string"
            app:layout_constraintEnd_toEndOf="@+id/password_text_field"
            app:layout_constraintTop_toBottomOf="@+id/password_text_field" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/login_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@+id/password_text_field"
            app:layout_constraintStart_toStartOf="@+id/signIn_button"
            app:layout_constraintTop_toTopOf="@+id/signIn_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>