<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.ChildHomeFragment">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/chat_map_view"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/child_call_fb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/call_string"
            android:src="@drawable/ic_baseline_call"
            app:fabSize="mini"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/child_chat_fb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/chat_string"
            android:src="@drawable/ic_baseline_message"
            app:fabSize="mini"
            app:layout_constraintStart_toStartOf="@+id/child_call_fb"
            app:layout_constraintTop_toBottomOf="@+id/child_call_fb" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/child_urgent_fb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/urgent_string"
            android:src="@drawable/ic_baseline_warning"
            app:fabSize="mini"
            app:layout_constraintStart_toStartOf="@+id/child_chat_fb"
            app:layout_constraintTop_toBottomOf="@+id/child_chat_fb" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/child_home_localisation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/my_location"
            android:src="@drawable/ic_baseline_my_location"
            app:fabSize="mini"
            app:layout_constraintBottom_toBottomOf="@+id/chat_map_view"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>