<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/create_layout_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.CreateAccountFragment">

        <LinearLayout
            android:id="@+id/parent_picture_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="32dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/take_picture_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/button_margin"
                android:layout_marginEnd="@dimen/button_margin"
                android:layout_weight="1"
                android:text="@string/take_picture_string" />

            <Button
                android:id="@+id/add_picture_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/button_margin"
                android:layout_marginEnd="@dimen/button_margin"
                android:layout_weight="1"
                android:text="@string/add_picture_string" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/full_name_text_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/full_name_string"
            app:layout_constraintEnd_toEndOf="@+id/parent_picture_container"
            app:layout_constraintStart_toStartOf="@+id/parent_picture_container"
            app:layout_constraintTop_toBottomOf="@+id/parent_picture_container">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/full_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_number_text_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/phone_number_string"
            app:layout_constraintEnd_toEndOf="@+id/full_name_text_field"
            app:layout_constraintStart_toStartOf="@+id/full_name_text_field"
            app:layout_constraintTop_toBottomOf="@+id/full_name_text_field">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_number_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number|phone" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/create_login_text_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/login_string"
            app:layout_constraintEnd_toEndOf="@+id/phone_number_text_field"
            app:layout_constraintStart_toStartOf="@+id/phone_number_text_field"
            app:layout_constraintTop_toBottomOf="@+id/phone_number_text_field">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/create_login_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/create_password_field_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/psw_string"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="@+id/create_login_text_field"
            app:layout_constraintStart_toStartOf="@+id/create_login_text_field"
            app:layout_constraintTop_toBottomOf="@+id/create_login_text_field">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/create_password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/finish_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/finish_string"
            app:layout_constraintEnd_toEndOf="@+id/create_password_field_text"
            app:layout_constraintStart_toStartOf="@+id/create_password_field_text"
            app:layout_constraintTop_toBottomOf="@+id/create_password_field_text" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/loading_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:indeterminate="true"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@+id/create_password_field_text"
            app:layout_constraintHorizontal_bias="0.568"
            app:layout_constraintStart_toStartOf="@+id/create_password_field_text"
            app:layout_constraintTop_toBottomOf="@+id/create_password_field_text" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>