<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.kidssecurity.view_model.parent_home.ParentHomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.ParentHomeFragment">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:listData="@{viewModel.childrenListWithUri}" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/recyclerView"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerView" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/child_profile_floating_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/child_profile_string"
            android:src="@drawable/ic_baseline_account"
            app:fabSize="mini"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerView" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/call_parent_home_fb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/call_string"
            android:src="@drawable/ic_baseline_call"
            app:fabSize="mini"
            app:layout_constraintEnd_toEndOf="@+id/child_profile_floating_button"
            app:layout_constraintStart_toStartOf="@+id/child_profile_floating_button"
            app:layout_constraintTop_toBottomOf="@+id/child_profile_floating_button" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/chat_parent_home_fb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/chat_string"
            android:src="@drawable/ic_baseline_message"
            app:fabSize="mini"
            app:layout_constraintEnd_toEndOf="@+id/call_parent_home_fb"
            app:layout_constraintStart_toStartOf="@+id/call_parent_home_fb"
            app:layout_constraintTop_toBottomOf="@+id/call_parent_home_fb" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>